Добавлено окно ChiefWindow и обновлены стили элементов
Добавлено новое окно ChiefWindow для управления столиками,
включая логику работы с базой данных. Удален функционал
редактирования и добавления столиков из TablesPage.xaml.cs.
Обновлена логика авторизации: для роли "шеф" открывается
ChiefWindow.

Обновлены стили элементов: добавлены закругленные углы для
Button, ComboBox, PasswordBox и TextBox. Применены новые стили
в EditStaffWindow.xaml. Незначительные изменения в других файлах.

--- a/OvertimeCafe/OvertimeCafe.csproj
+++ b/OvertimeCafe/OvertimeCafe.csproj
@@ -151,6 +151,9 @@
     <Compile Include="Views\AdminViews\Windows\SelectDishWindow.xaml.cs">
       <DependentUpon>SelectDishWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ChiefViews\Windows\ChiefWindow.xaml.cs">
+      <DependentUpon>ChiefWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Windows\AuthorisationWindow.xaml.cs">
       <DependentUpon>AuthorisationWindow.xaml</DependentUpon>
     </Compile>
@@ -275,6 +278,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ChiefViews\Windows\ChiefWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Windows\AuthorisationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -294,7 +301,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\ChiefViews\Pages\" />
-    <Folder Include="Views\ChiefViews\Windows\" />
     <Folder Include="Views\WaiterViews\Pages\" />
     <Folder Include="Views\WaiterViews\Windows\" />
   </ItemGroup>
